--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,5 +1,5 @@
-{% set version = "0.1.2" %}
-{% set sha256 = "3e9f8efe2c5f6fc62b69fbc65fcc64f50e23b74819e102c3bc9a314e27e5c9b8" %}
+{% set version = "0.2.0" %}
+{% set sha256 = "ffc11de027ca65da12b0dbb434222ca871b68d6dab6386dbef3388293d1b28f9" %}
 
 package:
   name: pyam
@@ -19,16 +19,19 @@ requirements:
     - python
     - pip
   run:
+    - argparse
     - numpy
-    - pandas >=0.21.0
+    - pandas >=0.21.0,!=0.24.0
     - pyyaml
     - xlrd
     - xlsxwriter
     - matplotlib
     - seaborn
     - six
-    - geopandas
+    - geopandas <0.5.0
     - cartopy
+    - gdal
+    - fiona
     - requests
 
 test:
