--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -21,7 +21,7 @@ requirements:
   run:
     - argparse
     - numpy
-    - pandas >=0.24.0
+    - pandas >0.24.0
     - pyyaml
     - xlrd
     - xlsxwriter
