--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -17,9 +17,10 @@ build:
 
 requirements:
   build:
-    - python
+    - python >=3.7
     - pip
   run:
+    - python >=3.7
     - numpy
     - pandas
     - pyyaml
