--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -22,13 +22,13 @@ requirements:
   run:
     - python >=3.7
     - numpy
-    - pandas
+    - pandas >= 1.1
     - pyyaml
-    - matplotlib-base
+    - matplotlib-base >= 3.2.0
     - seaborn
     - six
     - requests
-    - iam-units
+    - iam-units >= 2020.4.21
     - xlrd
     - openpyxl
     - datapackage
