--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -21,8 +21,8 @@ requirements:
     - pip
   run:
     - python >=3.7
-    - numpy
-    - pandas >=1.1
+    - numpy >=1.19.0
+    - pandas >=1.1.1
     - pyyaml
     - matplotlib-base >=3.2.0
     - seaborn
