--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -19,19 +19,23 @@ requirements:
   host:
     - python >=3.7
     - pip
+    - setuptools-scm
   run:
     - python >=3.7
+    - iam-units >=2020.4.21
+    - datapackage
     - numpy >=1.19.0
+    - requests
+    - openpyxl
     - pandas >=1.1.1
     - pyyaml
     - matplotlib-base >=3.2.0
     - seaborn
     - six
-    - requests
-    - iam-units >=2020.4.21
-    - xlrd
-    - openpyxl
-    - datapackage
+    - xlrd >=2.0
+    - pint >=0.11
+    - setuptools_scm
+    - importlib_metadata
 
 test:
   imports:
