--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -27,15 +27,20 @@ requirements:
     - numpy >=1.19.0
     - requests
     - openpyxl
+    - xlsxwriter
     - pandas >=1.1.1
     - pyyaml
     - matplotlib-base >=3.2.0
     - seaborn
     - six
+    - scipy
     - xlrd >=2.0
-    - pint >=0.11, <0.19
-    - setuptools_scm
+    - pint >=0.13
+    - setuptools-scm
     - importlib_metadata
+    - httpx
+    - python-dateutil
+    - pyjwt
 
 test:
   imports:
