--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -17,11 +17,11 @@ build:
 
 requirements:
   host:
-    - python >=3.7.1
+    - python >=3.7.1, <3.11
     - pip
     - setuptools-scm
   run:
-    - python >=3.7.1
+    - python >=3.7.1, <3.11
     - iam-units >=2020.4.21
     - datapackage
     - numpy >=1.19.0, <1.24
