--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -30,7 +30,7 @@ requirements:
     - xlsxwriter
     - pandas >=1.2.0
     - pyyaml
-    - matplotlib-base >=3.2.0
+    - matplotlib-base >=3.5.0, < 3.7.1
     - seaborn
     - six
     - scipy
