--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -3,11 +3,11 @@
 {% set sha256 = "3d4b9440d819c3f846c32ae5483bbd368ed015c170e50878adf4048d82992556" %}
 
 package:
-  name: {{ name }}
+  name: pyam
   version: {{ version }}
 
 source:
-  url: https://pypi.io/packages/source/p/pyam-iamc/pyam-iamc-{{ version }}.tar.gz
+  url: https://pypi.io/packages/source/p/{{ name }}/{{ name }}-{{ version }}.tar.gz
   sha256: {{ sha256 }}
 
 build:
