--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -17,25 +17,24 @@ build:
 
 requirements:
   host:
-    - python >=3.10,<3.12
-    - setuptools-scm
-    - setuptools >=41
+    - python >=3.10,<3.13
+    - poetry-core >=1.2.0
+    - poetry-dynamic-versioning
     - pip
   run:
-    - python >=3.10,<3.12
+    - python >=3.10,<3.13
     - iam-units >=2020.4.21
-    - ixmp4 >=0.4.0
-    - numpy >=1.23.0,<1.24
-    - pyjwt
-    - openpyxl
-    - pandas >=2.0.0
+    - ixmp4 >=0.8.0
+    - numpy >=1.26.0
+    - openpyxl >=3.1.2
+    - pandas >=2.1.2
     - pint >=0.13
-    - pyyaml
-    - matplotlib-base >=3.6.0,<3.7.1
+    - pyyaml >=6.0.1
+    - matplotlib-base >=3.6.0
     - scipy >=1.10.0
     - seaborn >=0.11
-    - six
-    - setuptools >=41
+    - six >=1.16.0
+    - wquantiles >=0.6
     - setuptools-scm
     - wquantiles
     - xlsxwriter
@@ -50,9 +49,9 @@ test:
 
 about:
   home: https://pyam-iamc.readthedocs.io/
+  summary: Analysis & visualization of integrated-assessment scenarios
   license: Apache-2.0
   license_file: LICENSE
-  summary: Analysis and visualization of integrated-assessment & macro-energy scenarios
   description: |
     The open-source Python package **pyam** provides a suite of tools and functions
     for analyzing and visualizing input data (i.e., assumptions/parametrization)
