--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -35,9 +35,8 @@ requirements:
     - seaborn >=0.11
     - six >=1.16.0
     - wquantiles >=0.6
-    - setuptools-scm
+    - xlsxwriter >=3.2.0
     - wquantiles
-    - xlsxwriter
 
 test:
   imports:
