--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -17,28 +17,26 @@ build:
 
 requirements:
   host:
-    - python >=3.10,<3.12
-    - setuptools-scm
-    - setuptools >=41
+    - python >=3.10,<3.13
+    - poetry-core >=1.2.0
+    - poetry-dynamic-versioning
     - pip
   run:
-    - python >=3.10,<3.12
+    - python >=3.10,<3.13
     - iam-units >=2020.4.21
-    - ixmp4 >=0.4.0
-    - numpy >=1.23.0,<1.24
-    - pyjwt
-    - openpyxl
-    - pandas >=2.0.0
+    - ixmp4 >=0.8.0
+    - matplotlib-base >=3.6.0
+    - numpy >=1.26.0
+    - openpyxl >=3.1.2
+    - pandas >=2.1.2
     - pint >=0.13
-    - pyyaml
-    - matplotlib-base >=3.6.0,<3.7.1
+    - pyyaml >=6.0.1
     - scipy >=1.10.0
     - seaborn >=0.11
-    - six
-    - setuptools >=41
-    - setuptools-scm
-    - wquantiles
-    - xlsxwriter
+    - six >=1.16.0
+    - requests >2.27.1
+    - wquantiles >=0.6
+    - xlsxwriter >=3.0.3
 
 test:
   imports:
