--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -24,9 +24,9 @@ requirements:
   run:
     - python >=3.10,<3.13
     - iam-units >=2020.4.21
-    - ixmp4 >=0.8.0
+    - ixmp4 >=0.9.0
     - matplotlib-base >=3.6.0
-    - numpy >=1.26.0
+    - numpy >=1.26.0,<2.0
     - openpyxl >=3.1.2
     - pandas >=2.1.2
     - pint >=0.13
